--- a/sample/buttons.html
+++ b/sample/buttons.html
@@ -69,7 +69,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/buttons.html" -->
                 </div>
                 <div class="third">
-                    <h3><label for="sample-buttons-1">Source Code:</label></h3>
+                    <h3>Source Code:</h3>
                     <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/buttons.html" --></code></pre>
                 </div>
             </div>
@@ -82,7 +82,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/buttons-active.html" -->
                 </div>
                 <div class="third">
-                    <h3><label for="sample-buttons-2">Source Code:</label></h3>
+                    <h3>Source Code:</h3>
                     <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/buttons-active.html" --></code></pre>
                 </div>
             </div>
@@ -95,7 +95,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/buttons-disabled.html" -->
                 </div>
                 <div class="third">
-                    <h3><label for="sample-buttons-3">Source Code:</label></h3>
+                    <h3>Source Code:</h3>
                     <pre  class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/buttons-disabled.html" --></code></pre>
                 </div>
             </div>
@@ -110,7 +110,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/buttons-outline.html" -->
                 </div>
                 <div class="third">
-                    <h3><label for="buttons-outline">Source Code:</label></h3>
+                    <h3>Source Code:</h3>
                     <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/buttons-outline.html" --></code></pre>
                 </div>
             </div>
@@ -123,7 +123,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/buttons-hover.html" -->
                 </div>
                 <div class="third">
-                    <h3><label for="buttons-hover">Source Code:</label></h3>
+                    <h3>Source Code:</h3>
                     <pre class="height-200"><code class="overflow-auto"><!--#include virtual="/sample/modules/buttons-hover.html" --></code></pre>
                 </div>
             </div>
@@ -134,7 +134,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/buttons-hover-icon.html" -->
                 </div>
                 <div class="third">
-                    <h3><label for="buttons-hover-icon">Source Code:</label></h3>
+                    <h3>Source Code:</h3>
                     <pre class="height-200"><code class="overflow-auto"><!--#include virtual="/sample/modules/buttons-hover-icon.html" --></code></pre>
                 </div>
             </div>
@@ -147,7 +147,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/buttons-sizes.html" -->
                 </div>
                 <div class="third">
-                    <h3><label for="buttons-sizes">Source Code:</label></h3>
+                    <h3>Source Code:</h3>
                     <pre class="height-200"><code class="overflow-auto"><!--#include virtual="/sample/modules/buttons-sizes.html" --></code></pre>
                 </div>
             </div>
