Fixed carousels page siteimprove accessibility errors

--- a/sample/modules/carousel-video.html
+++ b/sample/modules/carousel-video.html
@@ -1,5 +1,5 @@
 <div class="carousel owl-carousel carousel-video">
-    <div class="item"><a href="https://www.youtube.com/watch?v=2u2uaZ2rYSQ" class="owl-video"><span class="sr-only">First Video Title goes here</span></a></div>
-    <div class="item"><a href="https://www.youtube.com/watch?v=A-tUlDR50U4" class="owl-video"><span class="sr-only">Second Video Title goes here</span></a></div>
-    <div class="item"><a href="https://www.youtube.com/watch?v=ADLPNnld_nk" class="owl-video"><span class="sr-only">Third Video Title goes here</span></a></div>
+    <div class="item"><a href="https://www.youtube.com/watch?v=2u2uaZ2rYSQ" class="owl-video"><span class="sr-only">CalFile Instructional Video</span></a></div>
+    <div class="item"><a href="https://www.youtube.com/watch?v=A-tUlDR50U4" class="owl-video"><span class="sr-only">Renew your CA Driver License Online</span></a></div>
+    <div class="item"><a href="https://www.youtube.com/watch?v=ADLPNnld_nk" class="owl-video"><span class="sr-only">Can You Really 'Train' Your Brain?</span></a></div>
 </div>
