--- a/sample/countdown.html
+++ b/sample/countdown.html
@@ -121,14 +121,14 @@ Based on Twitter Bootstrap
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <label for="sample-counter-circles">Source Code:</label>
+                            <h4>Source Code:</h4>
 
                             <div class="tab-group">
                                 <span class="ca-gov-icon-favorite"></span>
                                 <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
                                 <ul class="nav nav-tabs responsive" role="tablist" id="primary">
-                                    <li class="nav-item" role="tab"><a href="#html" data-toggle="tab" class="nav-link active">HTML</a></li>
-                                    <li class="nav-item" role="tab"><a href="#scirpt" data-toggle="tab" class="nav-link">Script</a></li>
+                                    <li class="nav-item" role="tab"><a href="#html" data-toggle="tab" class="nav-link active">HTML <span class="sr-only"> for countdown primary</span></a></li>
+                                    <li class="nav-item" role="tab"><a href="#scirpt" data-toggle="tab" class="nav-link">Script <span class="sr-only"> for countdown primary</span></a></li>
 
                                 </ul>
                                 <!-- Tab panes -->
@@ -238,14 +238,14 @@ Based on Twitter Bootstrap
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <label for="sample-counter-circles">Source Code:</label>
+                            <h4>Source Code:</h4>
 
                             <div class="tab-group">
                                 <span class="ca-gov-icon-favorite"></span>
                                 <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
                                 <ul class="nav nav-tabs responsive" role="tablist" id="default">
-                                    <li class="nav-item" role="tab"><a href="#html2" data-toggle="tab" class="nav-link active">HTML</a></li>
-                                    <li class="nav-item" role="tab"><a href="#scirpt2" data-toggle="tab" class="nav-link">Script</a></li>
+                                    <li class="nav-item" role="tab"><a href="#html2" data-toggle="tab" class="nav-link active">HTML <span class="sr-only"> for countdown default</span></a></li>
+                                    <li class="nav-item" role="tab"><a href="#scirpt2" data-toggle="tab" class="nav-link">Script <span class="sr-only"> for countdown default</span></a></li>
                                    
                                 </ul>
                                 <!-- Tab panes -->
