Fixed featured narrative page siteimprove accessibility errors

--- a/sample/featured-narrative.html
+++ b/sample/featured-narrative.html
@@ -73,7 +73,7 @@ Based on Twitter Bootstrap
                     <p>Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
                 </article>
                 <div class="half">
-                    <h2><label for="sample-featured-narrative">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/featured-narrative.html" --></code></pre>
                 </div> 
             </div>
