--- a/sample/horizontal-rules.html
+++ b/sample/horizontal-rules.html
@@ -76,7 +76,7 @@ Based on Twitter Bootstrap
                     <hr class="hr-understated">
                 </div>
                 <div class="half">
-                    <h2><label for="sample-horizontal-rules">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><hr class="hr-understated"></code></pre>
                 </div> 
             </div>
