Fixed panes page siteimprove accessibility errors

--- a/sample/panes.html
+++ b/sample/panes.html
@@ -85,7 +85,7 @@ Based on Twitter Bootstrap
                             
                         </div>
                         <div class="modal-body">
-                            <label for="sample-news-list-sidebar">Source Code:</label>
+                            <h4>Source Code:</h4>
                             <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/panes.html" --></code></pre>
                         </div>
                         <div class="modal-footer">
