--- a/sample/progress-bars.html
+++ b/sample/progress-bars.html
@@ -86,7 +86,7 @@ Based on Twitter Bootstrap
                 <div class="half">
 
 
-                    <h2><label for="basic-progress">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/progress-bar.html" --></code></pre>
                 </div> 
             </div>
@@ -101,7 +101,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/progress-bar-variety.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="striped-progress">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/progress-bar-variety.html" --></code></pre>
                 </div>
             </div>
@@ -115,7 +115,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/progress-bar-striped.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="striped-progress">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/progress-bar-striped.html" --></code></pre>
                 </div>
             </div>
@@ -129,7 +129,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/progress-bar-animated.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="animated-progress">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/progress-bar-animated.html" --></code></pre>
                 </div>
             </div>
@@ -143,7 +143,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/progress-bar-stacked.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="stacked-progress">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/progress-bar-stacked.html" --></code></pre>
                 </div>
             </div>
