Fixed progress blocks page siteimprove accessibility errors

--- a/sample/progress-blocks.html
+++ b/sample/progress-blocks.html
@@ -82,7 +82,7 @@ Based on Twitter Bootstrap
 
                         </div>
                         <div class="modal-body">
-                            <label for="sample-news-list-sidebar">Source Code:</label>
+                            <h4>Source Code:</h4>
                             <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/progress-block.html" --></code></pre>
                         </div>
                         <div class="modal-footer">
@@ -108,7 +108,7 @@ Based on Twitter Bootstrap
 
                             </div>
                             <div class="modal-body">
-                                <label for="sample-news-list-sidebar">Source Code:</label>
+                                <h4>Source Code:</h4>
                                 <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/progress-block-bold.html" --></code></pre>
                             </div>
                             <div class="modal-footer">
