--- a/sample/modules/images.html
+++ b/sample/modules/images.html
@@ -2,14 +2,14 @@
 <div class="group">
     <div class="half">
         <ul class="list-unstyled">
-            <li class="m-b"><img src="images/70x70.gif" class="m-r"> Default</li>
-            <li class="m-b"><img src="images/70x70.gif" class="img-thumbnail m-r"> .img-thumbnail</li>
+            <li class="m-b"><img src="images/70x70.gif" class="m-r" alt="Default image sample"> Default</li>
+            <li class="m-b"><img src="images/70x70.gif" class="img-thumbnail m-r" alt="thumbnail image sample"> .img-thumbnail</li>
         </ul>
     </div>
     <div class="half">
         <ul class="list-unstyled">
-            <li class="m-b"><img src="images/70x70.gif" class="img-circle m-r"> .img-circle</li>
-            <li class="m-b"><img src="images/70x70.gif" class="img-rounded m-r"> .img-rounded</li>
+            <li class="m-b"><img src="images/70x70.gif" class="img-circle m-r" alt="circle image sample"> .img-circle</li>
+            <li class="m-b"><img src="images/70x70.gif" class="img-rounded m-r" alt="rounded corners image sample"> .img-rounded</li>
         </ul>
     </div>
     </div>
