Fixed service tiles page siteimprove accessibility errors

--- a/sample/modules/service-tiles-empty.html
+++ b/sample/modules/service-tiles-empty.html
@@ -54,9 +54,9 @@
                             </div>
 
                             <ul class="list-inline list-unstyled m-t-md social">
-                                <li class="list-inline-item"><a href="" aria-label="DMV Twitter link"><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter</span></span></a></li>
-                                <li class="list-inline-item"><a href="" aria-label="DMV Facebook link"><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook</span></span></a></li>
-                                <li class="list-inline-item"><a href="" aria-label="DMV Google Plus link"><span class="ca-gov-icon-google-plus" ><span class="sr-only">Google+</span></span></a></li>
+                                <li class="list-inline-item"><a href="" aria-label="DMV Twitter link"><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter (DMV)</span></span></a></li>
+                                <li class="list-inline-item"><a href="" aria-label="DMV Facebook link"><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook (DMV)</span></span></a></li>
+                                <li class="list-inline-item"><a href="" aria-label="DMV Google Plus link"><span class="ca-gov-icon-google-plus" ><span class="sr-only">Google+ (DMV)</span></span></a></li>
                             </ul>
                         </div>
 
@@ -103,9 +103,9 @@
                         </div>
 
                         <ul class="list-inline list-unstyled m-t-md social">
-                            <li class="list-inline-item"><a href="#" aria-label="CalCareer Twitter"><span class="ca-gov-icon-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></a></li>
-                            <li class="list-inline-item"><a href="#" aria-label="CalCareer Facebook"><span class="ca-gov-icon-facebook" aria-hidden="true"><span class="sr-only">Facebook</span></span></a></li>
-                            <li class="list-inline-item"><a href="#" aria-label="CalCareer Google plus"><span class="ca-gov-icon-google-plus" aria-hidden="true"><span class="sr-only">Google+</span></span></a></li>
+                            <li class="list-inline-item"><a href="#" aria-label="CalCareer Twitter"><span class="ca-gov-icon-twitter" aria-hidden="true"><span class="sr-only">Twitter CalHR</span></span></a></li>
+                            <li class="list-inline-item"><a href="#" aria-label="CalCareer Facebook"><span class="ca-gov-icon-facebook" aria-hidden="true"><span class="sr-only">Facebook CalHR</span></span></a></li>
+                            <li class="list-inline-item"><a href="#" aria-label="CalCareer Google plus"><span class="ca-gov-icon-google-plus" aria-hidden="true"><span class="sr-only">Google+ CalHR</span></span></a></li>
                         </ul>
                     </div>
 
@@ -150,9 +150,9 @@
                             </div>
 
                             <ul class="list-inline list-unstyled m-t-md social">
-                                <li class="list-inline-item"><a href="#" aria-label="DMV Twitter"><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter</span></span></a></li>
-                                <li class="list-inline-item"><a href="#" aria-label="DMV Facebook"><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook</span></span></a></li>
-                                <li class="list-inline-item"><a href="#" aria-label="DMV Google plus"><span class="ca-gov-icon-google-plus"><span class="sr-only">Google+</span></span></a></li>
+                                <li class="list-inline-item"><a href="#" aria-label="DMV Twitter"><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter DMV</span></span></a></li>
+                                <li class="list-inline-item"><a href="#" aria-label="DMV Facebook"><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook DMV</span></span></a></li>
+                                <li class="list-inline-item"><a href="#" aria-label="DMV Google plus"><span class="ca-gov-icon-google-plus"><span class="sr-only">Google+ DMV</span></span></a></li>
                             </ul>
                         </div>
 
