--- a/sample/service-group.html
+++ b/sample/service-group.html
@@ -6,14 +6,14 @@
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
 <!--[if (gt IE 9)]><!-->
 <html class="no-js" lang="en">
- <!--<![endif]-->
+<!--<![endif]-->
 <head>
     <!--
-California State Template
-Version 5.5.2
+    California State Template
+    Version 5.5.2
 
-    Based on Twitter Bootstrap
-    -->
+        Based on Twitter Bootstrap
+        -->
     <meta charset="utf-8">
 
     <title>Sample - Service Group</title>
@@ -33,13 +33,10 @@ Version 5.5.2
 
         <!-- Include Utility Header -->
         <!--#include virtual="/ssi/utility-header.html" -->
-
         <!-- Settings Bar -->
         <!--#include virtual="/ssi/settings-bar.html" -->
-
         <!-- Include Branding -->
         <!--#include virtual="/ssi/branding.html" -->
-
         <!-- Include Mobile Controls -->
         <!--#include virtual="/ssi/mobile-controls.html" -->
 
@@ -60,7 +57,7 @@ Version 5.5.2
     <div id="main-content" class="main-content">
 
         <main class="main-primary">
-            <div class="container">            
+            <div class="container">
                 <ol class="breadcrumb">
                     <li><a href="../index.html" title="Home page">Home</a></li>
                     <li><a href="index.html" title="Examples landing page">Examples</a></li>
@@ -88,7 +85,7 @@ Version 5.5.2
             <div class="container">
                 <div class="group">
 
-                    <h2><label for="sample-list-a">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre class="height-600"><code class="overflow-auto"><!--#include virtual="/sample/modules/service-tiles.html" --></code></pre>
                     <div class="clearfix"><br /></div>
                 </div>
