Fixed SocialSharer page siteimprove accessibility errors

--- a/sample/socialsharer.html
+++ b/sample/socialsharer.html
@@ -75,7 +75,7 @@ Based on Twitter Bootstrap
                     </div>
                 </div>
                 <div class="half">
-                    <h2><label for="sample-accordion">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/socialsharer.html" --></code></pre>
                 </div>
             </div>
