--- a/sample/modules/tabs-bottom.html
+++ b/sample/modules/tabs-bottom.html
@@ -2,16 +2,16 @@
     <span class="ca-gov-icon-favorite"></span>
     <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
     <ul id="homeTabsBottom" class="nav nav-tabs" role="tablist">
-        <li class="active nav-item" role="tab"><a href="#homeB" data-toggle="tab">Home</a></li>
-        <li role="tab" class="nav-item"><a href="#profileB" data-toggle="tab">Profile</a></li>
-        <li role="tab" class="nav-item"><a href="#messagesB" data-toggle="tab">Messages</a></li>
-        <li role="tab" class="nav-item"><a href="#settingsB" data-toggle="tab">Settings</a></li>
+        <li class="active nav-item" role="tab"><a href="#homeB" data-toggle="tab">Area</a></li>
+        <li role="tab" class="nav-item"><a href="#profileB" data-toggle="tab">Article</a></li>
+        <li role="tab" class="nav-item"><a href="#messagesB" data-toggle="tab">Module</a></li>
+        <li role="tab" class="nav-item"><a href="#settingsB" data-toggle="tab">Component</a></li>
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
-        <div class="tab-pane active" id="homeB">Home Tab</div>
-        <div class="tab-pane" id="profileB">Profile Tab</div>
-        <div class="tab-pane" id="messagesB">Messages Tab</div>
-        <div class="tab-pane" id="settingsB">Settings Tab</div>
+        <div class="tab-pane active" id="homeB">Area Tab</div>
+        <div class="tab-pane" id="profileB">Article Tab</div>
+        <div class="tab-pane" id="messagesB">Module Tab</div>
+        <div class="tab-pane" id="settingsB">Component Tab</div>
     </div>
 </div>
