--- a/sample/modules/tabs-responsive.html
+++ b/sample/modules/tabs-responsive.html
@@ -1,13 +1,13 @@
 <div class="tab-group responsive">
     <ul id="tabs" class="nav nav-tabs" role="tablist">
         <li class="nav-item">
-            <a id="tab-home" href="#pane-home" class="nav-link active" data-toggle="tab" role="tab">Home</a>
+            <a id="tab-home" href="#pane-home" class="nav-link active" data-toggle="tab" role="tab">Location</a>
         </li>
         <li class="nav-item">
-            <a id="tab-profile" href="#pane-profile" class="nav-link" data-toggle="tab" role="tab">Profile</a>
+            <a id="tab-profile" href="#pane-profile" class="nav-link" data-toggle="tab" role="tab">Context</a>
         </li>
         <li class="nav-item">
-            <a id="tab-messages" href="#pane-messages" class="nav-link" data-toggle="tab" role="tab">Messages</a>
+            <a id="tab-messages" href="#pane-messages" class="nav-link" data-toggle="tab" role="tab">Communication</a>
         </li>
     </ul>
 
@@ -15,45 +15,45 @@
     <div id="tab-content" class="tab-content" role="tablist">
         <div id="pane-home" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-home">
             <div class="card-header" role="tab" id="heading-home">
-                <h5 class="mb-0">
-                    <a data-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true" aria-controls="collapse-home">
-                        Home
+                <h5 class="my-0">
+                    <a data-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true" aria-controls="collapse-home" title="Location tab header">
+                        Location
                     </a>
                 </h5>
             </div>
             <div id="collapse-home" class="collapse show" role="tabpanel" aria-labelledby="heading-home">
                 <div class="card-body">
-                    Home Tab
+                    Location Tab
                 </div>
             </div>
         </div>
 
         <div id="pane-profile" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-profile">
             <div class="card-header" role="tab" id="heading-profile">
-                <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" href="#collapse-profile" data-parent="#tab-content" aria-expanded="false" aria-controls="collapse-profile">
-                        Profile
+                <h5 class="my-0">
+                    <a class="collapsed" data-toggle="collapse" href="#collapse-profile" data-parent="#tab-content" aria-expanded="false" aria-controls="collapse-profile" title="Context tab header">
+                        Context
                     </a>
                 </h5>
             </div>
             <div id="collapse-profile" class="collapse" role="tabpanel" aria-labelledby="heading-profile">
                 <div class="card-body">
-                    Profile Tab
+                    Context Tab
                 </div>
             </div>
         </div>
 
         <div id="pane-messages" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-messages">
             <div class="card-header" role="tab" id="heading-messages">
-                <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" href="#collapse-messages" data-parent="#tab-content" aria-expanded="false" aria-controls="collapse-messages">
-                        Messages
+                <h5 class="my-0">
+                    <a class="collapsed" data-toggle="collapse" href="#collapse-messages" data-parent="#tab-content" aria-expanded="false" aria-controls="collapse-messages" title="Communication tab header">
+                        Communication
                     </a>
                 </h5>
             </div>
             <div id="collapse-messages" class="collapse" role="tabpanel" aria-labelledby="heading-messages">
                 <div class="card-body">
-                    Messages Tab
+                    Communication Tab
                 </div>
             </div>
         </div>
