Fixed tables page siteimprove accessibility errors

--- a/sample/tables.html
+++ b/sample/tables.html
@@ -72,7 +72,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/table.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-table">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/table.html" --></code></pre>
                 </div> 
             </div>
@@ -88,7 +88,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/table-default.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-table-default">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/table-default.html" --></code></pre>
                 </div> 
             </div>
@@ -104,7 +104,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/table-striped.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-table-striped">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/table-striped.html" --></code></pre>
                 </div> 
             </div>
@@ -120,7 +120,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/table-bordered.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-table-bordered">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/table-bordered.html" --></code></pre>
                 </div> 
             </div>
@@ -134,7 +134,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/table-responsive.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-table-responsive">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/table-responsive.html" --></code></pre>
                 </div> 
             </div>
