Updated testimonials page siteimprove accessibility errors

--- a/sample/testimonials.html
+++ b/sample/testimonials.html
@@ -75,7 +75,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/testimonial-default.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-accordion">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/testimonial-default.html" --></code></pre>
                 </div> 
             </div>
@@ -89,7 +89,7 @@ Based on Twitter Bootstrap
                     <p><span class="label label-info">Note:</span> The source order for <code>.thumbnail</code> and <code>.testimonial-body</code> have been reversed. Source order is important when using this component with this configuration.</p>
                 </div>
                 <div class="half">
-                    <h2><label for="testimonial-danger">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/testimonial-danger.html" --></code></pre>
                 </div> 
             </div>
@@ -102,7 +102,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/testimonial-standout.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="testimonial-standout">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/testimonial-standout.html" --></code></pre>
                 </div> 
             </div>
@@ -115,7 +115,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/testimonial-top.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="testimonial-stacked">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/testimonial-top.html" --></code></pre>
                 </div> 
             </div>
