Fixed agency directory and service directory pages accessibility issues

--- a/sample/accordions.html
+++ b/sample/accordions.html
@@ -65,8 +65,7 @@ Version 5.0.6
                                              </div>
                                              <div class="half">
                                                  <h2><label for="sample-accordion">Source Code:</label></h2>
-                                                 <textarea id="sample-accordion" class="form-control" rows="10" cols="80">
-                                                     <!--#include virtual="/sample/modules/accordion.html" -->
+                                                 <textarea id="sample-accordion" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/accordion.html" -->
                                                  </textarea>
                                              </div>
                                          </div>
