Fixed dreamweaver tempalte page accessibility errors

--- a/sample/dreamweaver-templates.html
+++ b/sample/dreamweaver-templates.html
@@ -67,10 +67,10 @@ Based on Twitter Bootstrap
                 <p>For those webmasters that choose to use the Dreamweaver templates, the following is a set of basic instructions for using the templates. This is not intended to be a comprehensive tutorial on using Dreamweaver. There are many tutorials and books on using Dreamweaver and templates. Please refer to those educational sources for any help beyond this documentation.</p>
                 <p>There are 8 templates provided, one for each template configuration. </p>
                 <ul>
-                    <li>Primary banner (<a href="/PrimaryBanner-1-column.html">1 columns</a> and <a href="/PrimaryBanner-2-column.html">2 column</a>)</li>
-                    <li>Slideshow banner (<a href="/SlideshowBanner-1-column.html">1 columns</a> and <a href="/SlideshowBanner-2-column.html">2 column</a>)</li>
-                    <li>Large banner (<a href="/LargeBanner-1-column.html">1 columns</a> and <a href="/LargeBanner-2-column.html">2 column</a>)</li>
-                    <li>Regular page (<a href="/1-column.html">1 coluns</a> and <a href="/2-column.html">2 column</a>)</li>
+                    <li>Primary banner (<a href="/PrimaryBanner-1-column.html">1 columns <span class="sr-only">primary</span></a> and <a href="/PrimaryBanner-2-column.html">2 column <span class="sr-only">primary</span></a>)</li>
+                    <li>Slideshow banner (<a href="/SlideshowBanner-1-column.html">1 columns <span class="sr-only">slideshow</span></a> and <a href="/SlideshowBanner-2-column.html">2 column <span class="sr-only">slideshow</span></a></a>)</li>
+                    <li>Large banner (<a href="/LargeBanner-1-column.html">1 columns <span class="sr-only">large</span></a> and <a href="/LargeBanner-2-column.html">2 column <span class="sr-only">large</span></a>)</li>
+                    <li>Regular page (<a href="/1-column.html">1 coluns <span class="sr-only">regular</span></a> and <a href="/2-column.html">2 column <span class="sr-only">regular</span></a>)</li>
                 </ul>
                 <p>The templates with &quot;ribbon&quot; contain the primary, large and slideshow headers, see <a href="page-templates.html">Page Templates</a> for more information on header types. The ribbon templates are generally recommended for use as a homepage template. The 1 column and 2 column templates without the ribbon are recommended for internal pages.                </p>
                 <h2>Optional Banner</h2>
