Fixed color scheme pages accessibility errors

--- a/sample/colorscheme-eureka.html
+++ b/sample/colorscheme-eureka.html
@@ -9,11 +9,11 @@
 
 <head>
     <!--
-California State Template
-Version 5.0.6
+    California State Template
+    Version 5.0.6
 
-        Based on Twitter Bootstrap
-    -->
+            Based on Twitter Bootstrap
+        -->
     <meta charset="utf-8">
     <title>Eureka Color Scheme</title>
     <meta name="Author" content="State of California" />
@@ -316,7 +316,7 @@ Version 5.0.6
                                 </small>
                             </header>
 
-                            <a class="news-link" href="#">Read More</a>
+                            <a class="news-link" href="#">File for paid family leave insurance</a>
                         </article>
                         <!-- End Article -->
                         <!--<ul class="list-inline list-unstyled m-t-md">
