--- a/sample/colorscheme-oceanside.html
+++ b/sample/colorscheme-oceanside.html
@@ -8,11 +8,11 @@
 <!--<![endif]-->
 <head>
     <!--
-California State Template
-Version 5.0.6
+    California State Template
+    Version 5.0.6
 
-        Based on Twitter Bootstrap
-    -->
+            Based on Twitter Bootstrap
+        -->
     <meta charset="utf-8">
     <title>Oceanside Color Scheme</title>
     <meta name="Author" content="State of California" />
@@ -140,16 +140,13 @@ Version 5.0.6
 <body>
     <header role="banner" id="header" class="global-header fixed">
         <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
-        
+
         <!-- Include Utility Header -->
-		<!--#include virtual="/ssi/utility-header.html" -->	
-        
-        <!-- Settings Bar -->	
-		<!--#include virtual="/ssi/settings-bar.html" -->
-
-		<!-- Include Branding -->
-		<!--#include virtual="/ssi/branding.html" -->
-
+        <!--#include virtual="/ssi/utility-header.html" -->
+        <!-- Settings Bar -->
+        <!--#include virtual="/ssi/settings-bar.html" -->
+        <!-- Include Branding -->
+        <!--#include virtual="/ssi/branding.html" -->
         <!-- Include Mobile Controls -->
         <!--#include virtual="/ssi/mobile-controls.html" -->
 
@@ -232,7 +229,7 @@ Version 5.0.6
                                 Main theme colors classes will be listed at the top of the CSS file. You can copy their values and use find/replace feature
                                 in your web editor software to replace all those colors references with your custom colors throughout entire css file.
                             </p>
-                                <span class="font-size-sm"><strong>Note:</strong> Before changing your colors make sure that your custom theme colors have sufficient color cotrast ratios.</span>
+                            <span class="font-size-sm"><strong>Note:</strong> Before changing your colors make sure that your custom theme colors have sufficient color cotrast ratios.</span>
                             </p>
                         </div>
                     </div>
@@ -320,12 +317,9 @@ Version 5.0.6
                                 </small>
                             </header>
 
-                            <a class="news-link" href="#">Read More</a>
+                            <a class="news-link" href="#">File for paid family leave insurance</a>
                         </article>
                         <!-- End Article -->
-
-
-
                         <!--<ul class="list-inline list-unstyled m-t-md">
                             <li><span class="ca-gov-icon-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></li>
                             <li><span class="ca-gov-icon-facebook" aria-hidden="true"><span class="sr-only">Facebook</span></span></li>
@@ -354,7 +348,7 @@ Version 5.0.6
             </div>
         </main>
 
-</div>
+    </div>
 
     <!--#include virtual="/ssi/global-footer.html" -->
     <!--#include virtual="/ssi/scripts.html" -->
