--- a/sample/colorscheme-santabarbara.html
+++ b/sample/colorscheme-santabarbara.html
@@ -8,11 +8,11 @@
 <!--<![endif]-->
 <head>
     <!--
-California State Template
-Version 5.0.6
+    California State Template
+    Version 5.0.6
 
-        Based on Twitter Bootstrap
-    -->
+            Based on Twitter Bootstrap
+        -->
     <meta charset="utf-8">
     <title>Santa Barbara Color Scheme</title>
     <meta name="Author" content="State of California" />
@@ -140,13 +140,10 @@ Version 5.0.6
 
         <!-- Include Utility Header -->
         <!--#include virtual="/ssi/utility-header.html" -->
-
         <!-- Settings Bar -->
         <!--#include virtual="/ssi/settings-bar.html" -->
-
         <!-- Include Branding -->
         <!--#include virtual="/ssi/branding.html" -->
-
         <!-- Include Mobile Controls -->
         <!--#include virtual="/ssi/mobile-controls.html" -->
 
@@ -320,7 +317,7 @@ Version 5.0.6
                                 </small>
                             </header>
 
-                            <a class="news-link" href="#">Read More</a>
+                            <a class="news-link" href="#">File for paid family leave insurance</a>
                         </article>
                         <!-- End Article -->
                         <!--<ul class="list-inline list-unstyled m-t-md">
