Fixed general landing, business profile and large header banner pages accessibility issues

--- a/sample/large-header-banner.html
+++ b/sample/large-header-banner.html
@@ -82,7 +82,7 @@ Based on Twitter Bootstrap
             <button class="toggleBanner btn btn-secondary m-r-sm m-b-sm"> Remove Large Banner													</button>  
         	<a href="page-templates.html"><button class="btn btn-secondary m-r-sm m-b-sm">Back to Page Templates</button></a>    
             
-            <h2>Source Code:</h2>
+            <h2><label for="sample-header-slideshow-banner">Source Code:</label></h2>
             <textarea id="sample-header-slideshow-banner" class="form-control" rows="10" cols="80"><!--#include virtual="/ssi/header-large-banner.html" --></textarea>
             <br />
                     
