--- a/sample/modules/icon-links.html
+++ b/sample/modules/icon-links.html
@@ -2,7 +2,7 @@
 <div class="section-transparent text-center">
     <div class="group  p-b-md">
         <div class="fifth">
-            <a href="#" class="icon-link">
+            <a href="#" class="icon-link text-white">
                 <div class="block-icon">
                     <span class="circle-icon ca-gov-icon-tools" aria-hidden="true"></span>
                 </div>
@@ -10,7 +10,7 @@
             </a>
         </div>
         <div class="fifth">
-            <a href="#" class="icon-link">
+            <a href="#" class="icon-link text-white">
                 <div class="block-icon">
                     <span class="circle-icon ca-gov-icon-people" aria-hidden="true"></span>
                 </div>
@@ -18,7 +18,7 @@
             </a>
         </div>
         <div class="fifth">
-            <a href="#" class="icon-link">
+            <a href="#" class="icon-link text-white">
                 <div class="block-icon">
                     <span class="circle-icon ca-gov-icon-ca-capitol" aria-hidden="true"></span>
                 </div>
@@ -26,7 +26,7 @@
             </a>
         </div>
         <div class="fifth">
-            <a href="#" class="icon-link">
+            <a href="#" class="icon-link text-white">
                 <div class="block-icon">
                     <span class="circle-icon ca-gov-icon-favorite" aria-hidden="true"></span>
                 </div>
@@ -34,7 +34,7 @@
             </a>
         </div>
         <div class="fifth">
-            <a href="#" class="icon-link">
+            <a href="#" class="icon-link text-white">
                 <div class="block-icon">
                     <span class="circle-icon ca-gov-icon-email" aria-hidden="true"></span>
                 </div>
