--- a/general-landing.html
+++ b/general-landing.html
@@ -401,7 +401,7 @@
                 </div>
             </div>
 
-            <div class="section section-standout">
+            <div class="section section-default">
                 <div class="container">
                     <div class="carousel owl-carousel carousel-content">
                         <div class="item">
