Fixed grid page siteimprove accessibility errors

--- a/sample/grid.html
+++ b/sample/grid.html
@@ -85,7 +85,7 @@ Based on Twitter Bootstrap
 
                 </div>
                  <div class="third">
-                    <h2><label for="sample-accordion">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/grid.html" --></code></pre>
                 </div> 
             </div>
