Fixed breadcrumbs page siteimprove accessibility errors

--- a/sample/breadcrumb.html
+++ b/sample/breadcrumb.html
@@ -72,7 +72,7 @@ Based on Twitter Bootstrap
                      <!--#include virtual="/sample/modules/breadcrumb.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-media">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/breadcrumb.html" --></code></pre>
                 </div> 
             </div>
@@ -89,7 +89,7 @@ Based on Twitter Bootstrap
                      <!--#include virtual="/sample/modules/breadcrumb-dynamic.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-media-dynamic">Source Code:</label></h2>
+                    <h2>Source Code:</h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/breadcrumb-dynamic.html" --></code></pre>
                 </div> 
             </div>
